--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,3 +138,11 @@
 .custom-scroll-bar::-webkit-scrollbar-thumb:hover {
   background: #888; 
 }
+
+.material-symbols-rounded {
+  font-variation-settings:
+    'FILL' 0, 
+    'wght' 250,
+    'GRAD' 0,
+    'opsz' 34;
+}
