--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,3 +146,11 @@
     'GRAD' 0,
     'opsz' 34;
 }
+
+.navItems {
+  font-variation-settings:
+    'FILL' 1, 
+    'wght' 250,
+    'GRAD' 0,
+    'opsz' 34;
+}
