--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -139,15 +139,6 @@
   background: #888; 
 }
 
-.material-symbols-rounded {
-  font-variation-settings:
-    'FILL' 0, 
-    'wght' 250,
-    'GRAD' 0,
-    'opsz' 34;
-
-  transition: font-variation-settings 0.2s ease;
-}
 
 .lucid-icons:hover {
   cursor: pointer;
@@ -159,3 +150,8 @@
   fill: none;
 }
 
+html,
+body {
+  height: 100%;
+  overflow: hidden; 
+}
